finish onboarding_screen.dart local

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,1 +1,11 @@
-{}
+{
+  "onboardingTitle1": "الأفلام معاك في أي مكان وأي وقت",
+  "onboardingTitle2": "وجهتك الوحيدة لعالم الأفلام",
+  "onboardingTitle3": "السينما في جيبك",
+  "onboardingDescription1": "افتح عالم الترفيه مع LetsSee. شغّل أفلامك المفضلة من أي مكان وفي أي وقت.",
+  "onboardingDescription2": "سحر الأفلام من غير أي حدود. استمتع بتجربة سينمائية سهلة وممتعة في إيديك.",
+  "onboardingDescription3": "خلّي سحر السينما معاك على طول. مع LetsSee هتقدر تتفرج على الأفلام في أي وقت وأي مكان وتعيش المغامرة السينمائية.",
+  "onboardingContinue": "إستمر",
+  "onboardingGetStarted": "يلا نبدأ",
+  "onboardingSkip": "تخطي"
+}
