--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -32,7 +32,7 @@
   "createAccountText" : "Create an account",
   "registerDescriptionText" : "Register now and start exploring all that our app has to offer. We’re excited to welcome you to our community!",
 
-  "termsAndConditionsText1": "By logging in, you agree to ",
+  "termsAndConditionsText1": "By creating an account, you agree to the ",
   "termsAndConditionsText2": "Terms & Conditions",
   "termsAndConditionsText3": " and ",
   "termsAndConditionsText4": "Privacy Policy."
