--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -32,7 +32,7 @@
   "createAccountText" : "إنشاء حساب",
   "registerDescriptionText" : "سجل الآن وابدأ في استكشاف كل ما يقدمه تطبيقنا. نحن متحمسون للترحيب بك في مجتمعنا!",
 
-  "termsAndConditionsText1": "بتسجيل الدخول، انت بتوافق على ",
+  "termsAndConditionsText1": "بإنشاء حساب، أنت توافق على ",
   "termsAndConditionsText2": "الشروط والأحكام",
   "termsAndConditionsText3": " و ",
   "termsAndConditionsText4": "سياسة الخصوصية."
