finish auth feature

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -53,6 +53,13 @@
   "phoneNumberRequiredError": "رقم الهاتف مطلوب",
   "phoneNumberInvalidError": "رقم الهاتف غير صحيح",
 
+  "verificationEmail" : "التحقق من البريد الإلكتروني",
+  "verificationInfoText1" : "لقد أرسلنا رابط التحقق إلى بريدك الإلكتروني:",
+  "verificationInfoText2" : "يرجى فحص بريدك الإلكتروني والنقر على الرابط الموجود في الرسالة لتأكيد عنوان بريدك.",
+  "dontReceive" : "لم تستلم البريد الإلكتروني؟",
+  "resend" : "إعادة إرسال",
+
+
   "networkRequestFailed": "يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى.",
   "invalidCredential": "البيانات غير صحيحة. تأكد من المعلومات وحاول مرة أخرى.",
   "wrongPassword": "كلمة المرور غير صحيحة. حاول مرة أخرى.",
