finish auth feature

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -58,7 +58,8 @@
   "verificationInfoText2" : "يرجى فحص بريدك الإلكتروني والنقر على الرابط الموجود في الرسالة لتأكيد عنوان بريدك.",
   "dontReceive" : "لم تستلم البريد الإلكتروني؟",
   "resend" : "إعادة إرسال",
-
+  "verificationSuccess" : "تم التحقق من البريد الإلكتروني بنجاح",
+  "invalidDataInput": "يرجى التحقق من المعلومات التي أدخلتها والمحاولة مرة أخرى.",
 
   "networkRequestFailed": "يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى.",
   "invalidCredential": "البيانات غير صحيحة. تأكد من المعلومات وحاول مرة أخرى.",
