feat: Add localization support for app strings and onboarding screens
- Introduced new localization strings in English and Arabic for app name, description, and onboarding titles/descriptions.
- Updated existing strings for consistency and clarity.
- Added new strings for various UI components including error messages, settings, and notifications.
- Created a new LoginScreen widget with localized text fields and buttons.
- Refactored pubspec.yaml to enable internationalization and updated dependencies.
- Improved the main app structure to support localization.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,76 +1,116 @@
 {
-  "onboardingTitle1": "الأفلام معاك في أي مكان وأي وقت",
-  "onboardingTitle2": "وجهتك الوحيدة لعالم الأفلام",
-  "onboardingTitle3": "السينما في جيبك",
-  "onboardingDescription1": "افتح عالم الترفيه مع LetsSee. شغّل أفلامك المفضلة من أي مكان وفي أي وقت.",
-  "onboardingDescription2": "سحر الأفلام من غير أي حدود. استمتع بتجربة سينمائية سهلة وممتعة في إيديك.",
-  "onboardingDescription3": "خلّي سحر السينما معاك على طول. مع LetsSee هتقدر تتفرج على الأفلام في أي وقت وأي مكان وتعيش المغامرة السينمائية.",
-  "onboardingContinue": "إستمر",
-  "onboardingGetStarted": "يلا نبدأ",
-  "onboardingSkip": "تخطي",
+    "languageCode": "ar",
+    "appName": "Movie Zone",
+    "appDescription": "وجهتك المميزة لأفلامك المفضلة. استمتع بمشاهدتها في أي وقت وأي مكان.",
+    "onboardingTitle1": "أفلام في أي وقت، وفي أي مكان",
+    "onboardingTitle2": "وجهتك غير المحدودة للأفلام",
+    "onboardingTitle3": "السينما في جيبك",
+    "onboardingDescription1": "اكتشف عالم الترفيه مع LetsSee. استمتع بأفلامك المفضلة من أي مكان وأي وقت.",
+    "onboardingDescription2": "حيث لا حدود للسحر السينمائي. استمتع برحلة سينمائية سلسة بين يديك.",
+    "onboardingDescription3": "خذ سحر السينما معك. LetsSee يتيح لك مشاهدة الأفلام أثناء التنقل، لتكون قريبًا دائمًا من مغامراتك السينمائية.",
+    "onboardingContinue": "استمر",
+    "onboardingGetStarted": "ابدأ الآن",
+    "onboardingSkip": "تخطي",
+  
+    "fullName": "الاسم الكامل",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "phoneNumber": "رقم الهاتف",
+  
+    "loginDontHaveAccText": "ليس لديك حساب؟ ",
+    "loginDontHaveAccHighlightText": "سجل الآن",
+  
+    "signupHaveAccText": "هل لديك حساب؟ ",
+    "signupHaveAccHighlightText": "تسجيل الدخول",
+  
+    "loginForgotPassword": "هل نسيت كلمة المرور؟",
+    "loginButton": "تسجيل الدخول",
+    "signupButton": "إنشاء حساب",
+    "phoneSearchLabel": "بحث",
+    "phoneSearchHint": "اسم الدولة أو الرمز",
+    "loginOrDivider": "أو",
+  
+    "createAccountText": "إنشاء حساب",
+    "registerDescriptionText": "سجل الآن وابدأ في استكشاف كل ما نقدمه في تطبيقنا. نحن متحمسون للترحيب بك في مجتمعنا!",
+  
+    "termsAndConditionsText1": "بإنشاء حساب، فإنك توافق على ",
+    "termsAndConditionsText2": "الشروط والأحكام",
+    "termsAndConditionsText3": " و ",
+    "termsAndConditionsText4": "سياسة الخصوصية.",
+  
+    "fullNameRequiredError": "الاسم الكامل مطلوب",
+    "fullNameTooShortError": "الاسم الكامل قصير جدًا",
+    "fullNameInvalidError": "الاسم الكامل يجب أن يحتوي فقط على حروف، أرقام، و#",
+  
+    "emailRequiredError": "البريد الإلكتروني مطلوب",
+    "emailInvalidError": "البريد الإلكتروني غير صحيح",
+  
+    "passwordRequiredError": "كلمة المرور مطلوبة",
+    "passwordInvalidError": "يجب أن تكون كلمة المرور مكونة من 8 أحرف على الأقل وتشمل حروف كبيرة وصغيرة وأرقام ورموز خاصة",
+  
+    "confirmPasswordRequiredError": "تأكيد كلمة المرور مطلوب",
+    "passwordsDoNotMatchError": "كلمات المرور غير متطابقة",
+  
+    "phoneNumberRequiredError": "رقم الهاتف مطلوب",
+    "phoneNumberInvalidError": "رقم الهاتف غير صحيح",
+  
+    "verificationEmail": "رسالة التحقق",
+    "verificationInfoText1": "لقد أرسلنا رابط التحقق إلى بريدك الإلكتروني:",
+    "verificationInfoText2": "يرجى التحقق من بريدك الإلكتروني والنقر على الرابط لتأكيد عنوان البريد الإلكتروني.",
+    "dontReceive": "لم تستلم البريد؟",
+    "resend": "إعادة إرسال",
+    "verificationSuccess": "تم التحقق من البريد الإلكتروني بنجاح",
+    "invalidDataInput": "يرجى التحقق من المعلومات المدخلة والمحاولة مرة أخرى.",
+  
+    "networkRequestFailed": "خطأ في الشبكة: يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى.",
+    "invalidCredential": "بيانات اعتماد غير صحيحة. يرجى التحقق من معلوماتك والمحاولة مرة أخرى.",
+    "wrongPassword": "كلمة المرور غير صحيحة. يرجى المحاولة مرة أخرى.",
+    "invalidEmail": "البريد الإلكتروني غير صحيح.",
+    "userDisabled": "تم تعطيل الحساب المرتبط بهذا البريد الإلكتروني.",
+    "userNotFound": "لا يوجد حساب مرتبط بهذا البريد الإلكتروني.",
+    "emailAlreadyInUse": "البريد الإلكتروني مستخدم بالفعل.",
+    "weakPassword": "كلمة المرور ضعيفة. اختر كلمة مرور أقوى.",
+    "operationNotAllowed": "تم تعطيل هذه العملية من قبل المسؤول.",
+    "tooManyRequests": "عدد كبير جدًا من الطلبات. يرجى المحاولة لاحقًا.",
+    "unknownError": "حدث خطأ غير معروف. يرجى المحاولة مرة أخرى.",
+    "noDataAvailable": "لا توجد بيانات لعرضها الآن",
+    "noCastAvailable": "لا يوجد طاقم تمثيل متاح",
+    "description": "الوصف",
+    "trailers": "تريلرات",
+    "cast": "طاقم العمل", 
+    "productionCompanies": "شركات الإنتاج",
+    "noDescriptionAvailable": "لا يوجد وصف",
+    "more": "المزيد",
+    "less": "أقل",
+    "errorLoadingData": "حدث خطأ في تحميل البيانات",
 
-  "fullName" : "الاسم الكامل",
-  "email" : "الإيميل",
-  "password" : "كلمة السر",
-  "confirmPassword" : "تأكيد كلمة السر",
-  "phoneNumber" : "رقم التليفون",
+    "home": "الرئيسية",
+    "startWatching": "ابدأ المشاهدة",
+    "trendingToday": "الرائجة اليوم",
+    "trendingThisWeek": "الرائجة هذا الأسبوع",
+    "topRated": "الأعلى تقييمًا",
+    "popular": "الأشهر",
+    "upcoming": "القادمة",
+    "seeMore": "عرض المزيد",
 
-  "loginDontHaveAccText" : "مفيش حساب؟ ",
-  "loginDontHaveAccHighlightText" : "سجل",
-
-  "signupHaveAccText": "عندك حساب؟ ",
-  "signupHaveAccHighlightText": "تسجيل الدخول",
-
-
-  "loginForgotPassword" : "نسيت كلمة السر؟",
-  "loginButton" : "تسجيل الدخول",
-  "signupButton" : "إنشاء حساب",
-  "phoneSearchLabel" : "بحث",
-  "phoneSearchHint" : "الكود أو اسم البلد",
-  "loginOrDivider" : "أو",
-
-  "createAccountText" : "إنشاء حساب",
-  "registerDescriptionText" : "سجل الآن وابدأ في استكشاف كل ما يقدمه تطبيقنا. نحن متحمسون للترحيب بك في مجتمعنا!",
-
-  "termsAndConditionsText1": "بإنشاء حساب، أنت توافق على ",
-  "termsAndConditionsText2": "الشروط والأحكام",
-  "termsAndConditionsText3": " و ",
-  "termsAndConditionsText4": "سياسة الخصوصية.",
-
-  "fullNameRequiredError": "الاسم الكامل مطلوب",
-  "fullNameTooShortError": "الاسم الكامل قصير جدًا",
-  "fullNameInvalidError": "الاسم يجب أن يحتوي فقط على حروف، أرقام، أو #",
-
-  "emailRequiredError": "البريد الإلكتروني مطلوب",
-  "emailInvalidError": "البريد الإلكتروني غير صحيح",
-
-  "passwordRequiredError": "كلمة السر مطلوبة",
-  "passwordInvalidError": "كلمة السر يجب أن تكون 8 أحرف على الأقل وتحتوي على حروف كبيرة وصغيرة وأرقام ورموز خاصة",
-
-  "confirmPasswordRequiredError": "تأكيد كلمة السر مطلوب",
-  "passwordsDoNotMatchError": "كلمات السر غير متطابقة",
-
-  "phoneNumberRequiredError": "رقم الهاتف مطلوب",
-  "phoneNumberInvalidError": "رقم الهاتف غير صحيح",
-
-  "verificationEmail" : "التحقق من البريد الإلكتروني",
-  "verificationInfoText1" : "لقد أرسلنا رابط التحقق إلى بريدك الإلكتروني:",
-  "verificationInfoText2" : "يرجى فحص بريدك الإلكتروني والنقر على الرابط الموجود في الرسالة لتأكيد عنوان بريدك.",
-  "dontReceive" : "لم تستلم البريد الإلكتروني؟",
-  "resend" : "إعادة إرسال",
-  "verificationSuccess" : "تم التحقق من البريد الإلكتروني بنجاح",
-  "invalidDataInput": "يرجى التحقق من المعلومات التي أدخلتها والمحاولة مرة أخرى.",
-
-  "networkRequestFailed": "يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى.",
-  "invalidCredential": "البيانات غير صحيحة. تأكد من المعلومات وحاول مرة أخرى.",
-  "wrongPassword": "كلمة المرور غير صحيحة. حاول مرة أخرى.",
-  "invalidEmail": "البريد الإلكتروني غير صالح.",
-  "userDisabled": "تم تعطيل الحساب المرتبط بهذا البريد الإلكتروني.",
-  "userNotFound": "لا يوجد حساب مرتبط بهذا البريد الإلكتروني.",
-  "emailAlreadyInUse": "البريد الإلكتروني مستخدم بالفعل من قبل حساب آخر.",
-  "weakPassword": "كلمة المرور ضعيفة جدًا. اختر كلمة مرور أقوى.",
-  "operationNotAllowed": "تم تعطيل هذه الطريقة من قبل المسؤول.",
-  "tooManyRequests": "هناك الكثير من الطلبات. يرجى المحاولة مرة أخرى لاحقًا.",
-  "unknownError": "حدث خطأ غير معروف. يرجى المحاولة مرة أخرى."
-
-}
+    "editProfile": "تعديل الحساب",
+    "confirmChanges": "تأكيد التغييرات",
+    "accountStatus": "نشط",
+    "settings": "الإعدادات",
+    "wifiOnly": "الاتصال بالإنترنت فقط",
+    "darkMode": "الوضع الليلي",
+    "connectToTV": "التوصيل بالشاشة",
+    "defultQuality": "الجودة الافتراضية",
+    "appearance": "المظهر",
+    "autoAppearance": "تلقائي",
+    "lightAppearance": "فاتح",
+    "darkAppearance": "غامق",
+    "appLanguage": "لغة التطبيق",
+    "chooseLanguage": "اختر اللغة",
+    "notifications": "الإشعارات",
+    "allowNotifications": "السماح بالإشعارات",
+    "logout": "تسجيل الخروج"
+    
+  }
+  
