--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,76 +1,116 @@
 {
-  "onboardingTitle1" : "Movies Anywhere, Anytime",
-  "onboardingTitle2" : "Your Unlimited Movie Destination",
-  "onboardingTitle3" : "Cinema in Your Pocket",
-  "onboardingDescription1" : "Unlock the world of entertainment with LetsSee. Stream your favorite films from wherever you are, whenever you want.",
-  "onboardingDescription2" : "Where movie magic knows no boundaries. Experience a seamless cinematic journey at your fingertips.",
-  "onboardingDescription3" : "Carry the magic of the movies with you. LetsSee lets you watch films on the go, connecting you to cinematic adventures.",
-  "onboardingContinue" : "Continue",
-  "onboardingGetStarted" : "Get Started",
-  "onboardingSkip" : "Skip",
+    "languageCode": "en",
+    "appName": "Movie Zone",
+    "appDescription": "Your ultimate movie destination. Stream, watch, and enjoy movies anytime, anywhere.",
+    "onboardingTitle1": "Movies Anywhere, Anytime",
+    "onboardingTitle2": "Your Unlimited Movie Destination",
+    "onboardingTitle3": "Cinema in Your Pocket",
+    "onboardingDescription1": "Unlock the world of entertainment with LetsSee. Stream your favorite films from anywhere, anytime.",
+    "onboardingDescription2": "Where movie magic knows no boundaries. Experience a seamless cinematic journey at your fingertips.",
+    "onboardingDescription3": "Carry the magic of movies with you. LetsSee lets you watch films on the go, connecting you to cinematic adventures.",
+    "onboardingContinue": "Continue",
+    "onboardingGetStarted": "Get Started",
+    "onboardingSkip": "Skip",
+  
+    "fullName": "Full Name",
+    "email": "Email",
+    "password": "Password",
+    "confirmPassword": "Confirm Password",
+    "phoneNumber": "Phone Number",
+  
+    "loginDontHaveAccText": "Don't have an account? ",
+    "loginDontHaveAccHighlightText": "Sign up",
+  
+    "signupHaveAccText": "Already have an account? ",
+    "signupHaveAccHighlightText": "Log in",
+  
+    "loginForgotPassword": "Forgot Password?",
+    "loginButton": "Log In",
+    "signupButton": "Create Account",
+    "phoneSearchLabel": "Search",
+    "phoneSearchHint": "Country code or name",
+    "loginOrDivider": "OR",
+  
+    "createAccountText": "Create an account",
+    "registerDescriptionText": "Sign up now and start exploring everything our app has to offer. We're excited to welcome you to our community!",
+  
+    "termsAndConditionsText1": "By creating an account, you agree to the ",
+    "termsAndConditionsText2": "Terms & Conditions",
+    "termsAndConditionsText3": " and ",
+    "termsAndConditionsText4": "Privacy Policy.",
+  
+    "fullNameRequiredError": "Full Name is required",
+    "fullNameTooShortError": "Full Name is too short",
+    "fullNameInvalidError": "Full Name can only contain letters, numbers, and #",
+  
+    "emailRequiredError": "Email is required",
+    "emailInvalidError": "Email is invalid",
+  
+    "passwordRequiredError": "Password is required",
+    "passwordInvalidError": "Password must be at least 8 characters long and include uppercase letters, lowercase letters, numbers, and special characters",
+  
+    "confirmPasswordRequiredError": "Confirm Password is required",
+    "passwordsDoNotMatchError": "Passwords do not match",
+  
+    "phoneNumberRequiredError": "Phone Number is required",
+    "phoneNumberInvalidError": "Phone Number is invalid",
+  
+    "verificationEmail": "Verification Email",
+    "verificationInfoText1": "We have sent a verification link to your email:",
+    "verificationInfoText2": "Please check your email and click the link to verify your email address.",
+    "dontReceive": "Didn't receive the email?",
+    "resend": "Resend",
+    "verificationSuccess": "Email verified successfully",
+    "invalidDataInput": "Please check the information you entered and try again.",
+  
+    "networkRequestFailed": "Network error: Please check your internet connection and try again.",
+    "invalidCredential": "Invalid credentials. Please check your information and try again.",
+    "wrongPassword": "Incorrect password. Please try again.",
+    "invalidEmail": "The email address is not valid.",
+    "userDisabled": "The account associated with this email has been disabled.",
+    "userNotFound": "No account found with this email.",
+    "emailAlreadyInUse": "The email is already in use by another account.",
+    "weakPassword": "The password is too weak. Please choose a stronger one.",
+    "operationNotAllowed": "This operation has been disabled by the administrator.",
+    "tooManyRequests": "Too many requests. Please try again later.",
+    "unknownError": "An unknown error occurred. Please try again.",
+    "noDataAvailable": "No data available at the moment",
+    "noCastAvailable": "No cast available",
+    "description": "Description",
+    "trailers": "Trailers",
+    "cast": "Cast",
+    "productionCompanies": "Production Companies",
+    "noDescriptionAvailable": "No description available",
+    "more": "More",
+    "less": "Less",
+    "errorLoadingData": "Error loading data",
 
-  "fullName" : "Full Name",
-  "email" : "Email",
-  "password" : "Password",
-  "confirmPassword" : "Confirm Password",
-  "phoneNumber" : "Phone Number",
+    "home": "Home",
+    "trendingToday": "Trending Today",
+    "trendingThisWeek": "Trending This Week",
+    "startWatching": "Start Watching",
+    "topRated": "Top Rated",
+    "popular": "Popular",
+    "upcoming": "Upcoming",
+    "seeMore": "See More",
 
-  "loginDontHaveAccText" : "Don't have an account? ",
-  "loginDontHaveAccHighlightText" : "Register",
+    "editProfile": "Edit Profile",
+    "confirmChanges": "Confirm Changes",
+    "accountStatus": "Active",
+    "settings": "Settings",
+    "wifiOnly": "Wifi Only",
+    "darkMode": "Dark Mode",
+    "connectToTV": "Connect to TV",
+    "defultQuality": "Default Quality",
+    "appearance": "Appearance",
+    "autoAppearance": "Auto",
+    "lightAppearance": "Light",
+    "darkAppearance": "Dark",
+    "appLanguage": "App Language",
+    "chooseLanguage": "Choose Language",
+    "notifications": "Notifications",
+    "allowNotifications": "Allow Notifications",
+    "logout": "Logout"
 
-  "signupHaveAccText": "Already have an account? ",
-  "signupHaveAccHighlightText": "Log In",
-
-
-  "loginForgotPassword" : "Forgot Password?",
-  "loginButton" : "Log In",
-  "signupButton" : "Create Account",
-  "phoneSearchLabel" : "Search",
-  "phoneSearchHint" : "Code or country name",
-  "loginOrDivider" : "OR",
-
-  "createAccountText" : "Create an account",
-  "registerDescriptionText" : "Register now and start exploring all that our app has to offer. We’re excited to welcome you to our community!",
-
-  "termsAndConditionsText1": "By creating an account, you agree to the ",
-  "termsAndConditionsText2": "Terms & Conditions",
-  "termsAndConditionsText3": " and ",
-  "termsAndConditionsText4": "Privacy Policy.",
-
-  "fullNameRequiredError" : "Full Name is required",
-  "fullNameTooShortError" : "Full Name is too short",
-  "fullNameInvalidError" : "Nickname can only contain letters, numbers, and #",
-
-  "emailRequiredError" : "Email is required",
-  "emailInvalidError" : "Full Name is too short",
-
-  "passwordRequiredError" : "Password is required",
-  "passwordInvalidError" : "Password must be at least 8 characters long and include uppercase letters, lowercase letters, numbers, and special characters",
-
-  "confirmPasswordRequiredError" : "Confirm Password is required",
-  "passwordsDoNotMatchError" : "Passwords do not match",
-
-  "phoneNumberRequiredError" : "Phone Number is required",
-  "phoneNumberInvalidError" : "Phone Number is invalid",
-
-  "verificationEmail" : "Verification Email",
-  "verificationInfoText1" : "We have sent a verification link to your email:",
-  "verificationInfoText2" : "Please check your email and click the link in the message to verify your email address.",
-  "dontReceive" : "Didn't receive the email?",
-  "resend" : "Resend",
-  "verificationSuccess" : "Email verified successfully",
-  "invalidDataInput": "Please check the information you entered and try again.",
-
-
-  "networkRequestFailed": "Network error: Please check your internet connection and try again.",
-  "invalidCredential": "Invalid credentials. Please check your information and try again.",
-  "wrongPassword": "Incorrect password. Please try again.",
-  "invalidEmail": "The email address is not valid.",
-  "userDisabled": "The account associated with this email has been disabled.",
-  "userNotFound": "No account found with this email.",
-  "emailAlreadyInUse": "The email is already in use by another account.",
-  "weakPassword": "The password is too weak. Please choose a stronger one.",
-  "operationNotAllowed": "This operation has been disabled by the administrator.",
-  "tooManyRequests": "Too many requests. Please try again later.",
-  "unknownError": "An unknown error occurred. Please try again."
-}
+  }
+  
