feat: Add search localization for favorite movies in Arabic, English, Spanish, and French

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -110,7 +110,10 @@
     "chooseLanguage": "اختر اللغة",
     "notifications": "الإشعارات",
     "allowNotifications": "السماح بالإشعارات",
-    "logout": "تسجيل الخروج"
+    "logout": "تسجيل الخروج",
+
+    "searchForYourFavoriteMovies": "ابحث عن أفلامك المفضلة"
+
     
   }
   
