--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -110,8 +110,8 @@
     "chooseLanguage": "Elegir idioma",
     "notifications": "Notificaciones",
     "allowNotifications": "Permitir notificaciones",
-    "logout": "Cerrar sesión"
+    "logout": "Cerrar sesión",
 
-    
+    "searchForYourFavoriteMovies": "Busca tus películas favoritas"
   }
   
