--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -88,7 +88,7 @@
     "home": "Accueil",
     "trendingToday": "Tendances aujourd'hui",
     "trendingThisWeek": "Tendances cette semaine",
-    "startWatching": "Commencer à regarder",
+    "startWatching": "Regarder",
     "topRated": "Top Noté",
     "popular": "Populaires",
     "upcoming": "À venir",
@@ -110,7 +110,8 @@
     "chooseLanguage": "Choisir la langue",
     "notifications": "Notifications",
     "allowNotifications": "Autoriser les notifications",
-    "logout": "Se déconnecter"
+    "logout": "Se déconnecter",
 
+    "searchForYourFavoriteMovies": "Rechercher vos films préférés"
   }
   
