fix: Update fullNameInvalidError messages for clarity across multiple languages
- Revised the error message for full name validation to specify that only letters and spaces are allowed, removing references to numbers and special characters.
- Updated the corresponding translations in Arabic, English, Spanish, and French to reflect this change, ensuring consistency in user feedback.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -41,7 +41,7 @@
   
     "fullNameRequiredError": "الاسم الكامل مطلوب",
     "fullNameTooShortError": "الاسم الكامل قصير جدًا",
-    "fullNameInvalidError": "الاسم الكامل يجب أن يحتوي فقط على حروف، أرقام، و#",
+    "fullNameInvalidError": "الاسم الكامل يجب أن يحتوي فقط على حروف ومسافات",
   
     "emailRequiredError": "البريد الإلكتروني مطلوب",
     "emailInvalidError": "البريد الإلكتروني غير صحيح",
