feat: Add localization for bookmark-related strings in multiple languages
- Introduced new localized strings for "Try Again", "My Bookmarks", "No bookmarked movies yet", and "Add movies to your bookmarks to see them here" in English, Arabic, Spanish, and French.
- Updated ARB and Dart files to support internationalization, enhancing user experience for diverse audiences.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -112,7 +112,13 @@
     "allowNotifications": "Allow Notifications",
     "logout": "Logout",
 
-    "searchForYourFavoriteMovies": "Search for your favorite movies"
+    "searchForYourFavoriteMovies": "Search for your favorite movies",
+
+    "tryAgain": "Try Again",
+
+    "myBookmarks": "My Bookmarks",
+    "noBookmarkedMovies": "No bookmarked movies yet",
+    "addMoviesToBookmarks": "Add movies to your bookmarks to see them here"
 
   }
   
