--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -112,7 +112,13 @@
     "allowNotifications": "السماح بالإشعارات",
     "logout": "تسجيل الخروج",
 
-    "searchForYourFavoriteMovies": "ابحث عن أفلامك المفضلة"
+    "searchForYourFavoriteMovies": "ابحث عن أفلامك المفضلة",
+
+    "tryAgain": "حاول مرة أخرى",
+
+    "myBookmarks": "أفلامي المحفوظة",
+    "noBookmarkedMovies": "لا يوجد أفلام محفوظة بعد",
+    "addMoviesToBookmarks": "أضف أفلامًا إلى مفضلاتك لرؤيتها هنا"
 
     
   }
