feat: Add localization for new time-related strings and confirmation actions
- Introduced localized strings for "Today", "Yesterday", "This Week", "This Month", "Last Month", "Older", "Confirm", "Cancel", "Delete", and "Are you sure you want to delete this bookmark?" in English, Arabic, Spanish, and French.
- Updated ARB and Dart files to support these new localizations, enhancing the app's internationalization capabilities.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -118,8 +118,18 @@
 
     "myBookmarks": "أفلامي المحفوظة",
     "noBookmarkedMovies": "لا يوجد أفلام محفوظة بعد",
-    "addMoviesToBookmarks": "أضف أفلامًا إلى مفضلاتك لرؤيتها هنا"
+    "addMoviesToBookmarks": "أضف أفلامًا إلى مفضلاتك لرؤيتها هنا",
 
-    
+    "today": "اليوم",
+    "yesterday": "أمس",
+    "thisWeek": "هذا الأسبوع",
+    "thisMonth": "هذا الشهر",
+    "lastMonth": "الشهر الماضي",
+    "older": "الأقدم",
+
+    "confirm": "تأكيد",
+    "deleteBookmark": "هل أنت متأكد أنك تريد حذف هذه المفضلة؟",
+    "cancel": "إلغاء",
+    "delete": "حذف"
   }
   
