--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -118,7 +118,18 @@
 
     "myBookmarks": "My Bookmarks",
     "noBookmarkedMovies": "No bookmarked movies yet",
-    "addMoviesToBookmarks": "Add movies to your bookmarks to see them here"
+    "addMoviesToBookmarks": "Add movies to your bookmarks to see them here",
 
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "thisWeek": "This Week",
+    "thisMonth": "This Month",
+    "lastMonth": "Last Month",
+    "older": "Older",
+
+    "confirm": "Confirm",
+    "deleteBookmark": "Are you sure you want to delete this bookmark?",
+    "cancel": "Cancel",
+    "delete": "Delete"
   }
   
